Removed java 1.3 incompatible method calls
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@741740 13f79535-47bb-0310-9956-ffa450edef68